# Pyth-Sched-Analytics

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Main_App_JS-files-Reference.md  README.md  REMAINING_WORK.md  _cache_version.py  app.py  auth.py  config.py  middleware.py  multi_resolution_pipeline.py  observability.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: main_python-sched-analytics.yml  security-bundle.yml
Reference/: CommunityGroups.js  Completionprediction.js  EVM.js  ExtRisks.js  Main_App_JS-files-Reference.md  PathScripts.js  Scenario_Optimization.js
completion/: __init__.py  calendar.py  monte_carlo.py  outcomes.py  recovery.py  routes.py
docs/: IMPLEMENTATION_IMPROVEMENTS.md  cybereum-multiresolution-guidance.md  exceed-alice-roadmap.md  observability.md  paths.md  roadmap-to-10.md  typing-progress.md  world-class-scorecard.md
docs/api/: README.md  completion.md  evm.md  graph-metrics.md  health.md  interface.md  solver.md
docs/research/: library_pulls.md  papers.yaml
docs/research/sketches/: e1_logsumexp_resource.py  validate_5tier_distributions.py
evm/: __init__.py  distributions.py  engine.py  forecast.py  helpers.py  metrics.py  routes.py
interface/: __init__.py  analytics.py  interfaceservice.md  routes.py
paths/: __init__.py  _constants.py  calendar_slack.py  distances.py  diversity.py  driving_graph.py  enumerate.py  routes.py  subpath_patterns.py
scripts/: check_claude_md.py
security/: INTAKE.md
solver/: Readme.md  __init__.py  adjoints.py  analysis.py  calendar_map.py  core.py  dag.py  models.py  objectives.py  optimizer.py  pareto.py  reference_classes.py  routes.py  stochastic.py
tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_cache_versioning.py  test_calendar_diff.py  test_completion.py  test_config.py  test_determinism.py  test_endpoints.py  test_evm.py  test_evm_diff.py  test_interface.py  test_middleware.py  test_networkit_gate.py  test_observability.py  test_paths.py  test_paths_diff.py  test_recovery_diff.py  test_solver.py  test_solver_constraints.py  test_solver_diagnostics.py  test_subpath_patterns.py  test_telemetry_js.py  test_upgrades.py
tests/diff_harness/: bench_evm.py  calendar_fixture_mon_holiday.json  calendar_fixture_no_holidays.json  calendar_fixture_wed_holiday.json  fixture_basic.json  fixture_complete.json  fixture_complex.json  fixture_overrun.json  fixture_with_holidays.json  path_fixture_diamond.json  path_fixture_lag_relations.json  path_fixture_linear.json  path_fixture_parallel.json  recovery_fixture_basic.json  run_js_calendar.js  run_js_evm.js  run_js_paths.js  run_js_recovery.js  run_js_telemetry.js
tools/: check_citations.py
